src/test/deca/context/valid/assign_01_so.deca
// Description:
//    Teste l'affectation et la conversion int -> float.
//
// Resultats:
//    5.0
//
// Historique:
//    cree le 13/01/2023

{
int a = 5;
int b;
float f;
b = a;
f = b;
print(f);
}